<resources>
    <string name="app_name">Bluefront</string>
    <string name="compose_new_post_desc">Compose New Post</string>
    <string name="account_bottom_bar_item">View Account</string>
    <string name="feed_bottom_bar_item">View Feed</string>
    <string name="sign_out">Sign Out</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="log_in_to_bluesky">Log In to Bluesky</string>
    <string name="feed">Feed</string>
    <string name="account">Account</string>
    <string name="followers">followers</string>
    <string name="following">following</string>"
    <string name="avatar_content_description">%1s avatar image</string>
    <string name="banner_content_description">%1s banner image</string>
    <string name="post">Post</string>
    <string name="new_post">New Post</string>
    <string name="discard">Discard</string>
    <string name="posting_error">Failed to post, retry.</string>
    <string name="no_user_found_error">No user found, retry.</string>
    <string name="user_data_load_error">Failed to fetch user, retry.</string>
    <string name="no_posts_found_error">Failed to fetch posts, pull to refresh.</string>
    <string name="login_error">Error logging in, retry.</string>
</resources>